tests/neg-custom-args/captures/i24137.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i24137.scala:16:21 ---------------------------------------
16 |  val _: B^{async} = b  // error, but could be OK if we have a way to mark
   |                     ^
   |                     Found:    (b : B{val elem1: A^{a}; val elem2: A^{a}}^{cap, a})
   |                     Required: B^{async}
   |
   |                     Note that capability cap is not included in capture set {async}.
   |
   |                     where:    cap is a fresh root capability in the type of value b
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i24137.scala:18:23 ---------------------------------------
18 |  val b1: B^{async} = B(a, a) // error but could also be OK
   |                      ^^^^^^^
   |                      Found:    B{val elem1: (a : A^{async}); val elem2: (a : A^{async})}^{cap, a}
   |                      Required: B^{async}
   |
   |                      Note that capability cap is not included in capture set {async}.
   |
   |                      where:    cap is a fresh root capability created in value b1 when constructing instance B
   |
   | longer explanation available when compiling with `-explain`
